# project4

./: Answers.md  AvlTree.h  CMakeLists.txt  Document.h  DocumentParser.cpp  DocumentParser.h  HashTable.h  Index.h  IndexHandler.cpp  IndexHandler.h  QueryProcessor.cpp  QueryProcessor.h  README.md  SearchEngine.cpp  SearchEngine.h  design_documentation.md  main.cpp  testAVLTree.cpp
